# Remeta

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/helpers/: flac.rs  m4a.rs  mod.rs  wma.rs
src/helpers/mp3/: id3v1.rs  id3v2.rs  mod.rs
src/metadata/: mod.rs
src/metadata/audio/: mod.rs
src/metadata/audio/formats/: flac.rs  m4a.rs  mod.rs  mp3v1.rs  mp3v2.rs  ogg.rs  wav.rs  wma.rs
src/metadata/audio/formats/duration/: flac.rs  m4a.rs  mod.rs  mp3.rs  ogg.rs  wav.rs  wma.rs
src/metadata/images/: mod.rs
src/metadata/images/formats/: mod.rs
src/metadata/images/formats/bitmap/: avif.rs  bmp.rs  gif.rs  heif.rs  ico.rs  jpg.rs  mod.rs  png.rs  tiff.rs  webp.rs
src/metadata/images/formats/vector/: eps.rs  mod.rs  pdf.rs  svg.rs
src/metadata/video/: mod.rs
src/metadata/video/formats/: avi.rs  mkv.rs  mod.rs  mp4.rs
src/metadata/video/formats/duration/: avi.rs  mkv.rs  mod.rs  mp4.rs
tests/: test_metadata.rs
