[package]
name = "remeta"
version = "1.1.1"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/RoseBlume/Remeta"
homepage = "https://github.com/RoseBlume/Remeta"
description = "A Rust crate for extracting metadata from various audio, video, and image formats."
keywords = ["meta", "metadata"]
categories = ["multimedia::encoding", "parsing"]

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = ["png", "jpg", "gif", "webp", "ico", "tiff", "bmp", "heif", "avif", "svg", "pdf", "eps", "flac", "id3v1", "id3v2", "m4a", "wav", "ogg", "wma", "mp4", "mkv", "avi"]
music = ["flac", "id3v1", "id3v2", "m4a", "wav", "ogg", "wma"]
videos = ["mp4", "mkv", "avi"]
images = ["png", "jpg", "gif", "webp", "ico", "tiff", "bmp", "heif", "avif", "svg", "pdf", "eps"]
bitmap-all = ["png", "jpg", "gif", "webp", "ico", "tiff", "bmp", "heif", "avif"]
vector-all = ["svg", "pdf", "eps"]



# Audio formats
flac = []
id3v1 = []
id3v2 = []
m4a = []
wav = []
ogg = []
wma = []


# Video formats
mp4 = []
mkv = []
avi = []

# Bitmap Image formats
jpg = []
png = []
gif = []
webp = []
ico = []
tiff = []
bmp = []
heif = []
avif = []


# Vector Image formats
svg = []
pdf = []
eps = []



[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = "fat" # Enables link-time-optimizations.
opt-level = 3
# panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
overflow-checks = false
incremental = false

